# Santroller

./: .clang-format  .gdbinit  .gitignore  .gitmodules  .travis.yml  404.html  CMakeLists.txt  CNAME  Descriptors.c  Gemfile  Jenkinsfile  LUFAConfig.h  LUFA_Guitar.ino  README.md  WiiExtension.cpp  WiiExtension.h  XInputPad.c  XInputPad.h  _config.yml  appveyor.yml  ardwiino_script_post.py  ardwiino_script_post_tool.py  ardwiino_script_pre.py  auto_calibration.md  avr.cmake  bindings.txt  boards.txt  bootloader.h  bootloader.py  build.py  build.sh  build_all.sh  cmake_install.cmake  compile_proto.cmake  config.py  console_detection.md  index.md  makefile  pico.cmake  pico_extras_import.cmake  (+16 more)
lib/: CMakeLists.txt  LightweightRingBuff.h  USBController.h  fxpt_atan2.h
lib/AVR-APA102-library/: .travis.yml  CHANGELOG.md  README.md
lib/AVR-APA102-library/example/: Makefile  main.c
lib/AVR-APA102-library/src/: apa102.c  apa102.h  apa102_patterns.c  apa102_patterns.h  apa102_simple_effects.c  apa102_simple_effects.h
lib/CRC32/src/: CRC32.cpp  CRC32.h
lib/FlashPROM/src/: FlashPROM.cpp  FlashPROM.h
lib/SNESpad/: CMakeLists.txt
lib/accelerometer/: CMakeLists.txt  accelerometer.cpp  accelerometer.hpp  accelerometerlib.cpp  accelerometerlib.hpp  readme.md
lib/ads1115/: CMakeLists.txt  libads1115.cpp  libads1115.hpp
lib/apa102/: CMakeLists.txt  libapa102.cpp  libapa102.hpp
lib/avr-nrf24l01/src/: nrf24l01-mnemonics.h  nrf24l01.c  nrf24l01.h
lib/avr/src/: pins.c  pins.cpp  pins.h  pins_define.h
lib/avr_lufa/src/: LUFAConfig.h
lib/band_hero_drum/: CMakeLists.txt  band_hero_drum.cpp  band_hero_drum.hpp  bh.hex  notes.md  readme.md
lib/config/src/: config.h  config_definitions.h  config_impl.h  defines.h
lib/controllers/src/: controller_reports.h  controllers.c  controllers.h
lib/crazy_guitar_neck/: CMakeLists.txt  crazy_guitar_neck.cpp  crazy_guitar_neck.hpp  readme.md
lib/crkd_drum/: CMakeLists.txt  crkd_drum_device.cpp  crkd_drum_device.hpp
lib/crkd_neck/: CMakeLists.txt  crkd_neck.cpp  crkd_neck.hpp  readme.md
lib/dj_hero_turntable/: CMakeLists.txt  dj_hero_turntable.cpp  dj_hero_turntable.hpp  djh-fw.hex  readme.md
lib/fxpt_math/src/: fxpt_math.c  fxpt_math.h
lib/gamecube_emulation/: CMakeLists.txt  gamecube_device.c  gamecube_device.h  joybus.pio
lib/guitar_hero_5_neck/: CMakeLists.txt  gh5-neck-fw.hex  guitar_hero_5_neck.cpp  guitar_hero_5_neck.hpp  readme.md
lib/hidparser/: CMakeLists.txt  hidparser.c  hidparser.h
lib/i2c/: i2c.c  i2c.h
lib/matrix/: CMakeLists.txt  libmatrix.cpp  libmatrix.hpp  matrix.cpp  matrix.hpp
lib/max1704x/: CMakeLists.txt  libmax1704x.cpp  libmax1704x.hpp  max1704x.cpp  max1704x.hpp
lib/midi/: CMakeLists.txt  MIDI.h  MIDI.hpp  MIDIData.cpp  MIDIData.hpp  MidiNotes.h  SimpleMidiTransport.hpp  midi_Defs.h
lib/midi_serial/: CMakeLists.txt  midi_serial.cpp  midi_serial.hpp
lib/mpr121/: CMakeLists.txt  libmpr121.cpp  libmpr121.hpp  mpr121.cpp  mpr121.hpp
lib/mpu6050/: inv_mpu.c  inv_mpu.h  inv_mpu_dmp_motion_driver.c  inv_mpu_dmp_motion_driver.h  mpu_math.c  mpu_math.h
lib/multiplexer/: CMakeLists.txt  libmultiplexer.cpp  libmultiplexer.hpp  multiplexer.cpp  multiplexer.hpp
lib/n64_gamecube_controller/: CMakeLists.txt  Controller.cpp  Controller.h  Controller.pio  GamecubeController.cpp  GamecubeController.h  N64Controller.cpp  N64Controller.h
lib/nanopb/: CMakeLists.txt
lib/nanopb/extra/: requirements.txt  requirements_lock.txt
lib/peripherals/: CMakeLists.txt  i2c.cpp  i2c.hpp  spi.cpp  spi.hpp  uart.cpp  uart.hpp
lib/protar_neck/: CMakeLists.txt  protar_neck_device.cpp  protar_neck_device.hpp  readme.md
lib/psx_controller/: CMakeLists.txt  psx_controller.cpp  psx_controller.hpp
lib/psx_emulation/: CMakeLists.txt  controller_simulator.c  controller_simulator.h  psxSPI.pio  psx_emulation.cpp  psx_emulation.hpp
lib/quadrature_encoder/: CMakeLists.txt  quadrature_encoder.cpp  quadrature_encoder.h  quadrature_encoder.pio
lib/ring_buffer/: CMakeLists.txt  ring_buffer.c  ring_buffer.h
lib/secondary_pico/: CMakeLists.txt  secondary_pico.cpp  secondary_pico.hpp
lib/shared_main/src/: shared_main.h
lib/spi/: spi.c  spi.h
lib/stp16cpc/: CMakeLists.txt  libstp16cpc.cpp  libstp16cpc.hpp
lib/usb/src/: descriptors.cpp  descriptors.h
lib/usb_endpoints/src/: commands.h
lib/vtech_guitar_ioexpander/: CMakeLists.txt  vtech_guitar_ioexpander.cpp  vtech_guitar_ioexpander.hpp  world_tour_drum.cpp
lib/wii_extension_emulation/: CMakeLists.txt  wii_extension_emulation.cpp  wii_extension_emulation.hpp
lib/wii_extensions/: CMakeLists.txt  wii.cpp  wii.hpp  wii_extension.cpp  wii_extension.hpp
lib/wii_remote_emulation/: CMakeLists.txt  btstack_config.h  eeprom.bin.h  inet.c  inet.h  motion.c  motion.h  sdp_consts.h  vector_math.h  wiimote.c  wiimote.h  wiimote_btstack.c  wiimote_btstack.h  wm_crypto.c  wm_crypto.h  wm_reports.c  wm_reports.h
lib/wm_crypto/: CMakeLists.txt  wm_crypto.c  wm_crypto.h
lib/world_tour_drum/: CMakeLists.txt  world_tour_drum.cpp  world_tour_drum.hpp
lib/ws2812/: CMakeLists.txt  libws2812.cpp  libws2812.hpp  ws2812.cpp  ws2812.hpp
lib/xbox_one_parser/: xbox_one_parser.cpp  xbox_one_parser.hpp
lib/xgip_protocol/: CMakeLists.txt  xgip_protocol.cpp  xgip_protocol.h
lib/xsm3/: CMakeLists.txt  excrypt_parve.c  excrypt_sha.c  excrypt_sha.h  usbdsec.c  xsm3.c
src/avr/: CMakeLists.txt  Makefile  main-src.mk  main.mk  serial.h  usb-src.mk
src/avr/lib/: LUFAConfig.h  i2c_impl.h  pin.c  pin.h  timer.c
src/avr/micro/: main.c  makefile.mk
src/pico/: CMakeLists.txt  TUSB-MIDI.hpp  TUSB-MIDI_defs.hpp  bt.cpp  bt.gatt  bt_profile.h  bt_rx.cpp  bt_rx_cnt.cpp  controller_simulator.c  controller_simulator.h  hidparser.c  hidparser.h  i2c_impl.h  io.c  io.cpp  io_define.h  main.c  main.cpp  midi.cpp  midi_host.c  midi_host.cpp  midi_host.h  pin.c  pins.c  pins.cpp  pins.h  pins_arduino.h  pins_define.h  psxSPI.pio  quadrature_encoder.c  quadrature_encoder.pio  serial.h  sleep.c  sleep.h  timer.c  tusb_config.h  xinput_device.c  xinput_device.cpp  xinput_device.h  xinput_host.c  (+2 more)
(+2352 files in other folders)
