add_subdirectory(midi)
add_subdirectory(peripherals)
add_subdirectory(band_hero_drum)
add_subdirectory(world_tour_drum)
add_subdirectory(wii_extensions)
add_subdirectory(guitar_hero_5_neck)
add_subdirectory(crazy_guitar_neck)
add_subdirectory(accelerometer)
add_subdirectory(dj_hero_turntable)
add_subdirectory(max1704x)
add_subdirectory(mpr121)
add_subdirectory(psx_controller)
add_subdirectory(matrix)
add_subdirectory(multiplexer)
add_subdirectory(secondary_pico)
add_subdirectory(psx_emulation)
add_subdirectory(wii_extension_emulation)
add_subdirectory(ws2812)
add_subdirectory(wii_remote_emulation)
add_subdirectory(gamecube_emulation)
add_subdirectory(SNESpad)
add_subdirectory(n64_gamecube_controller)