add_library(n64_gamecube_controller INTERFACE)
target_link_libraries(n64_gamecube_controller INTERFACE pico_stdlib hardware_pio)
target_include_directories(n64_gamecube_controller INTERFACE .)
pico_generate_pio_header(n64_gamecube_controller ${CMAKE_CURRENT_LIST_DIR}/Controller.pio)
target_sources(n64_gamecube_controller INTERFACE N64Controller.cpp GamecubeController.cpp Controller.cpp)